load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag( name = "verbose", build_setting_default = False,
           visibility = ["//visibility:public"])
config_setting( name = "enable_verbose", flag_values = { ":verbose": "True" },
           visibility = ["//visibility:public"])
config_setting( name = "disable_verbose", flag_values = { ":verbose": "False" },
           visibility = ["//visibility:public"])
