load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
    "rust_binary",
    "rust_test",
)

load("@io_bazel_rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    deps = ["//cargo:rustc_version",
            "//algebra-core/field-assembly:field_assembly"],
)

rust_library(
    name = "algebra_core",
    visibility = ["//visibility:public"],
    edition = "2018",
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "//algebra-core/algebra-core-derive:algebra_core_derive",
        "//cargo:derivative",
        "//cargo:unroll",
    ],
    deps = [
        ":build_script",
        "//algebra-core/field-assembly:field_assembly",
        "//cargo:num_traits",
        "//cargo:rand",
        "//cargo:rayon",
    ],
    crate_features = [
        "asm",
        "bn_382",
        "derive",
        "std",
        "llvm_asm",
        "parallel",
        "rayon",
        "algebra-core-derive"
    ],
)

