load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
)

rust_library(
    name = "algebra-snarky",
    visibility = ["//visibility:public"],
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "//bzl/cargo:derivative",
    ],
    deps = [
        "//algebra-core",
    ],
    crate_features = [
        "asm",      # = [ "algebra-core/llvm_asm" ]
        "parallel", # = [ "std", "algebra-core/parallel" ]
        "bn_382",
        "tweedle"
    ],
)

rust_library(
    name = "algebra-no-features",
    visibility = ["//visibility:public"],
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "//bzl/cargo:derivative",
    ],
    deps = [
        "//algebra-core",
    ],
)

rust_library(
    name = "algebra",
    visibility = ["//visibility:public"],
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "//bzl/cargo:derivative",
    ],
    # aliases = {
    #     "@zexe//algebra-core": "algebra_core",
    # },
    deps = [
        "@zexe//algebra-core",
    ],
    crate_features = [
        # full = [
        "bls12_377",
        "bls12_381",
        "sw6",
        "mnt4_298",
        "mnt4_753",
        "mnt6_298",
        "mnt6_753",
        "edwards_bls12",
        "edwards_sw6",
        "jubjub",
        "tweedle",
        "bn_382",

        "parallel"
    ],
)

# [features]
# default = [ "std" ]

# full = [ "bls12_377", "bls12_381", "sw6", "mnt4_298", "mnt4_753", "mnt6_298", "mnt6_753", "edwards_bls12", "edwards_sw6", "jubjub", "tweedle", "bn_382" ]

# bls12_377 = []
# bls12_381 = []
# edwards_bls12 = []
# edwards_sw6 = []
# jubjub = []
# sw6 = []
# mnt4_298 = []
# mnt4_753 = []
# mnt6_298 = []
# mnt6_753 = []
# bn_382 = []
# tweedle = []

# std = [ "algebra-core/std" ]
# parallel = [ "std", "algebra-core/parallel" ]
# derive = [ "algebra-core/derive" ]
# asm = [ "algebra-core/llvm_asm" ]
