load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
)

rust_library(
    name = "algebra",
    visibility = ["//visibility:public"],
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "//bzl/cargo:derivative",
    ],
    deps = [
        "@zexe//algebra-core",
    ],
    crate_features = [
        "bls12_377",
        "bls12_381",
        "sw6",
        "mnt4_298",
        "mnt4_753",
        "mnt6_298",
        "mnt6_753",
        "edwards_bls12",
        "edwards_sw6",
        "jubjub",
        "tweedle",
        "bn_382",

        "parallel"
    ],
)
