load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ppx_executable"
)

ocaml_module(
    name = "cstubs_applicative",
    opts =  ["-linkall"],
    src = "cstubs_applicative.ml",
    ppx = ":_ppx.exe",
    ppx_args = ["--conditional"],
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:base",
        "@opam//pkg:ctypes",
        "@opam//pkg:ctypes.stubs",
    ],
    visibility = ["//visibility:public"]
)

################################################################
ppx_executable(
    name = "_ppx.exe",
    main = "//bzl/ppx/exe:Driver",
    lazy_deps = ["@opam//pkg:bisect_ppx.runtime"],
    opts = [
        "-thread",
        "-linkall",
        "-predicates",
        "ppx_driver",
    ],
    deps = [
        "@opam//pkg:ppxlib",
        "@opam//pkg:bisect_ppx",
        "@ppx_version//src:ppx_version",
    ],
)
