load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    edition = "2018",
    visibility = ["//visibility:public"],
    name = "dpc",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = [
        "//cargo:derivative",
    ],
    deps = [
        "//algebra",
        "//r1cs-core:r1cs_core",
        "//r1cs-std:r1cs_std",
        "//crypto-primitives:crypto_primitives",
        "//gm17",
        "//bench-utils:bench_utils",

        "//cargo:rand",
    ],
    crate_features = [
        "bls12_377",
        "edwards_bls12",
        "edwards_sw6",
        "sw6"
    ]
)
