load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "groth16",
    edition = "2018",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//algebra-core:algebra_core",
        "//bench-utils:bench_utils",
        "//ff-fft:ff_fft",
        "//r1cs-core:r1cs_core",

        "//cargo:rand",
        "//cargo:rayon",
        # "//cargo:smallvec"
    ],
    crate_features = [
        "derive",
        "parallel",
        "std",
        "algebra-core/std",
    ]
)
