load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "groth16",
    edition = "2018",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//algebra-core",
        "//bench-utils",
        "//ff-fft",
        "//r1cs-core",

        "//cargo:rand",
        "//cargo:rayon",
    ],
    crate_features = [
        "derive",
        "parallel",
        "std",
        "algebra-core/std",
    ]
)
