load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    edition = "2018",
    name = "r1cs_core",
    visibility = ["//visibility:public"],
    # crate_type = "lib",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//algebra",
        "//cargo:smallvec",
    ],
    # crate_features = ["std", "algebra-core/std", "proc-macro"]
)
