load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "r1cs-core",
    edition = "2018",
    visibility = ["//visibility:public"],
    # crate_type = "lib",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//algebra-core",
        "//bzl/cargo:smallvec",
    ],
    crate_features = ["std",
                      "algebra-core/std",
                      ]
)
