load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    edition = "2018",
    name = "r1cs_std",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = [
        "//cargo:derivative",
    ],
    deps = [
        "//algebra",
        "//r1cs-core:r1cs_core",
    ],
    crate_features = [
        "bls12_377", "edwards_bls12", "edwards_sw6"
    ]
)
