load("@rules_cc//cc:defs.bzl", "cc_library")

load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module")

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

load("@//bzl/config/rust:BUILD.bzl", "RUST_CRATE_TYPE", "RUST_PROFILE_RELEASE")

INTF_OPTS = [
    "-linkall"
]

IMPL_OPTS = [
    "-linkall"
]

ocaml_module(
    name = "snarky-bn382",
    src  = "snarky_bn382.ml",
    opts = IMPL_OPTS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:ctypes",
        ":Snarky_bn382_stubs",
        "//snarky-bn382/bindings_gen:Snarky_bn382_generated_stubs",
        "//snarky-bn382/caml:Snarky_bn382_bindings",
    ],
    cc_deps = {
        # this is a statically compiled Rust lib:
        # ":snarky_bn382_stubs_stubs": "static"
        ":snarky_bn382_stubs_stubs": "default"
    },
    visibility = ["//visibility:public"]
)

## (self_build_stubs_archive (snarky_bn382_stubs))
## means we expect snarky_bn382_stubs.a
## but we don't have snarky_bn382_stubs.c, only snarky_bn382.c

## apparently, since lib snarky_bn382 depends on lib
## snarky_bn382_stubs, and it provides a c_name (snarky_bn382.c) and c
## flags, the latter will use this c file to produce its output. what
## does c_names mean? we don't know, since the manual only notes that
## it is "now deleted." evidently, refers to c files to be compiled by dune
## and "packaged together with" the lib.
ocaml_module(
    name = "Snarky_bn382_stubs",
    src  = "snarky_bn382_stubs.ml",
    opts = IMPL_OPTS + ["-linkall"],
    cc_deps = {":snarky_bn382": "default"},
    visibility = ["//visibility:public"],
)

cc_library(
    name = "snarky_bn382",
    srcs = [
        "//snarky-bn382/bindings_gen:snarky_bn382.c",
        "snarky_bn382.h"
    ],
    copts = [
        "-std=c11",
        "-Isnarky-bn382",
        "-Iexternal/zexe/snarky-bn382",
        ## overlook implicit decl error for
        ## 'zexe_tweedle_plonk_fq_verifier_index_write'
        "-Wno-implicit-function-declaration",
    ],
    include_prefix = "snarky_bn382",
    deps = [
        "@ocaml//csdk/ctypes"
    ],
    visibility = ["//visibility:public"],
)

rust_library(
    # output will be libsnarky_bn382_stubs_stubs.a
    name = "snarky_bn382_stubs_stubs",
    edition = "2018",
    crate_type = RUST_CRATE_TYPE,
    crate_features = [
        "bn_382",
        "std",
        "use_core",
        "i128"
    ],
    rustc_flags = RUST_PROFILE_RELEASE + ["-C", "target-feature=+bmi2,+adx"],
    srcs = glob(["src/**/*.rs"]),
    deps = [
        ## Using @zexe prevents clash with @marlin packages.
        ## Without this (and the corresponding local_repository rule in WORKSPACE)
        ## we get duplicate copies of these packages. This is because we import @marlin,
        ## which imports @zexe, so (some of) marlin's targets depend on @zexe// labels.
        "@zexe//algebra",
        "@zexe//bench-utils",
        "@zexe//crypto-primitives",
        "@zexe//dpc",
        "@zexe//ff-fft",
        "@zexe//gm17",
        "@zexe//groth16",
        "@zexe//groupmap",
        "@zexe//r1cs-core",
        "@zexe//r1cs-std",

        "@marlin//oracle",
        "@marlin//dlog_solver",
        "@marlin//circuits/marlin:marlin_circuits",
        "@marlin//circuits/plonk:plonk_circuits",

        "@marlin//pairing/commitment:commitment_pairing",
        "@marlin//pairing/marlin:marlin_protocol_pairing",

        "@marlin//dlog/commitment:commitment_dlog",
        "@marlin//dlog/marlin:marlin_protocol_dlog",
        "@marlin//dlog/plonk:plonk_protocol_dlog",

        "//bzl/cargo:libc",
        "//bzl/cargo:rand",
        "//bzl/cargo:rand_core",
        "//bzl/cargo:num_bigint",
        "//bzl/cargo:sprs",
        "//bzl/cargo:rayon"
    ],
)

